fix events/edit profile and register pages
